Add functionality to change pizza details

--- a/app/src/main/res/layout/activity_pizza_details.xml
+++ b/app/src/main/res/layout/activity_pizza_details.xml
@@ -6,13 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".PizzaDetails">
 
-    <ImageView
-        android:id="@+id/imgPizzaPreview"
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/canadian_pizza" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/layoutCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_pizza_prev"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:layout_margin="10dp"
+                app:srcCompat="@drawable/canadian_pizza"
+                android:contentDescription="Sample Image of Pizza" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Ingredients:"/>
+
+            <TextView
+                android:id="@+id/text_pizza_ing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/text_default_ing"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
