--- a/app/src/main/res/layout/activity_customer_info.xml
+++ b/app/src/main/res/layout/activity_customer_info.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:hint="FirstName LastName"
                 android:maxLines="1"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/userInfoGuidance"
                 app:layout_constraintStart_toStartOf="@+id/userInfoGuidance"
@@ -52,6 +53,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Street"
                 android:maxLines="1"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/userInfoGuidance"
                 app:layout_constraintStart_toStartOf="@+id/userInfoGuidance"
@@ -63,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:hint="City"
                 android:maxLines="1"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/userInfoGuidance"
                 app:layout_constraintStart_toStartOf="@+id/userInfoGuidance"
@@ -74,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:hint="State"
                 android:maxLines="1"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/userInfoGuidance"
                 app:layout_constraintStart_toStartOf="@+id/userInfoGuidance"
@@ -86,6 +90,7 @@
                 android:hint="Postal Code"
                 android:maxLength="6"
                 android:maxLines="1"
+                android:inputType="textPostalAddress"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/userInfoGuidance"
                 app:layout_constraintStart_toStartOf="@+id/userInfoGuidance"
@@ -98,6 +103,7 @@
                 android:hint="Phone Number"
                 android:maxLength="10"
                 android:maxLines="1"
+                android:inputType="phone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/userInfoGuidance"
                 app:layout_constraintStart_toStartOf="@+id/userInfoGuidance"
@@ -196,6 +202,7 @@
                 android:layout_height="wrap_content"
                 android:hint="White Garlic, BBQ, etc..."
                 android:maxLines="1"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/cardAdditionalGuideline"
                 app:layout_constraintStart_toStartOf="@+id/cardAdditionalGuideline"
@@ -207,6 +214,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Coke, Pepsi, Orange, etc..."
                 android:maxLines="1"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/cardAdditionalGuideline"
                 app:layout_constraintStart_toStartOf="@+id/cardAdditionalGuideline"
@@ -218,6 +226,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Beef, Pork, or Chicken"
                 android:maxLines="1"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/cardAdditionalGuideline"
                 app:layout_constraintStart_toStartOf="@+id/cardAdditionalGuideline"
