--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -20,7 +20,7 @@
             android:id="@+id/radioCash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:enabled="true"
+            android:checked="true"
             android:text="Cash" />
 
         <RadioButton
