--- a/app/src/main/res/layout/order_row_item.xml
+++ b/app/src/main/res/layout/order_row_item.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:text="Item: "
                 app:layout_constraintBottom_toBottomOf="@id/rowItemName"
-                app:layout_constraintRight_toLeftOf="@id/guideline3"
+                app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
                 app:layout_constraintStart_toStartOf="@+id/labelItemToppings"
                 app:layout_constraintTop_toTopOf="@id/rowItemName" />
 
@@ -36,16 +36,24 @@
                 android:layout_height="wrap_content"
                 android:text="Size: "
                 app:layout_constraintBottom_toBottomOf="@id/rowItemSize"
-                app:layout_constraintRight_toLeftOf="@id/guideline3"
+                app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
                 app:layout_constraintStart_toStartOf="@+id/labelItemToppings"
                 app:layout_constraintTop_toTopOf="@id/rowItemSize" />
+
+            <TextView
+                android:id="@+id/labelItemCrust"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Crust: "
+                app:layout_constraintRight_toLeftOf="@id/rowRightGuideline"
+                app:layout_constraintTop_toBottomOf="@id/rowItemName" />
 
             <TextView
                 android:id="@+id/labelItemToppings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Toppings: "
-                app:layout_constraintRight_toLeftOf="@id/guideline3"
+                app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toTopOf="@id/rowItemToppings"
                 app:layout_constraintBottom_toBottomOf="@id/rowItemToppings"/>
 
@@ -57,7 +65,7 @@
                 android:layout_marginLeft="20dp"
                 android:text="Pizza Name"
                 app:layout_constraintBottom_toTopOf="@id/rowItemSize"
-                app:layout_constraintLeft_toRightOf="@id/guideline3"
+                app:layout_constraintLeft_toRightOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -66,7 +74,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:text="Pizza Size"
-                app:layout_constraintLeft_toRightOf="@id/guideline3"
+                app:layout_constraintLeft_toRightOf="@id/rowLeftGuideline"
+                app:layout_constraintTop_toBottomOf="@id/rowItemName" />
+
+            <TextView
+                android:id="@+id/rowItemCrust"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Pizza Crust"
+                app:layout_constraintLeft_toRightOf="@id/rowRightGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemName" />
 
             <TextView
@@ -75,22 +92,33 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:text="Pizza Toppings"
-                app:layout_constraintLeft_toRightOf="@id/guideline3"
+                app:layout_constraintLeft_toRightOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemSize" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline3"
+            <TextView
+                android:id="@+id/rowItemPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="70dp" />
+                android:layout_marginLeft="10dp"
+                android:text="Pizza Price"
+                android:textSize="20sp"
+                app:layout_constraintLeft_toRightOf="@id/rowRightGuideline"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline4"
+                android:id="@+id/rowLeftGuideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="247dp" />
+                app:layout_constraintGuide_begin="70dp"
+                app:layout_constraintStart_toEndOf="@id/labelItemSize"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/rowRightGuideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="100dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
