--- a/app/src/main/res/layout/order_row_item.xml
+++ b/app/src/main/res/layout/order_row_item.xml
@@ -52,10 +52,10 @@
                 android:id="@+id/labelItemToppings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
                 android:text="Toppings: "
                 app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
-                app:layout_constraintTop_toTopOf="@id/rowItemToppings"
-                app:layout_constraintBottom_toBottomOf="@id/rowItemToppings"/>
+                app:layout_constraintTop_toTopOf="@id/rowItemToppings" />
 
 
             <TextView
@@ -100,10 +100,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"
                 android:text="Pizza Price"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/rowRightGuideline"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/rowItemCrust" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/rowLeftGuideline"
@@ -123,22 +125,4 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/row_item_crust"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="Pizza Crust"/>-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/row_item_toppings"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="Pizza Toppings"/>-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/row_item_price"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="Pizza Price"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
