--- a/app/src/main/res/layout/activity_customer_info.xml
+++ b/app/src/main/res/layout/activity_customer_info.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cardAdditional">
+        app:layout_constraintBottom_toTopOf="@id/cardAdditional"
+        app:cardCornerRadius="@dimen/radius"
+        app:cardBackgroundColor="@color/corn">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,7 +31,7 @@
                 android:id="@+id/labelUserInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Your Info"
+                android:text="@string/label_info_header"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +41,7 @@
                 android:id="@+id/editUserName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="FirstName LastName"
+                android:hint="@string/default_customer_name"
                 android:maxLines="1"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +53,7 @@
                 android:id="@+id/editUserStreet"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Street"
+                android:hint="@string/default_user_street"
                 android:maxLines="1"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +65,7 @@
                 android:id="@+id/editUserCity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="City"
+                android:hint="@string/default_user_city"
                 android:maxLines="1"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +77,7 @@
                 android:id="@+id/editUserState"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="State"
+                android:hint="@string/default_user_state"
                 android:maxLines="1"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +89,7 @@
                 android:id="@+id/editUserPostal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Postal Code"
+                android:hint="@string/default_user_postal"
                 android:maxLength="6"
                 android:maxLines="1"
                 android:inputType="textPostalAddress"
@@ -100,7 +102,7 @@
                 android:id="@+id/editUserPhone"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Phone Number"
+                android:hint="@string/default_user_phone"
                 android:maxLength="10"
                 android:maxLines="1"
                 android:inputType="phone"
@@ -112,7 +114,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Name:"
+                android:text="@string/label_user_name"
                 app:layout_constraintTop_toTopOf="@id/editUserName"
                 app:layout_constraintBottom_toBottomOf="@id/editUserName"
                 app:layout_constraintRight_toLeftOf="@id/userInfoGuidance"
@@ -121,7 +123,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Street:"
+                android:text="@string/label_user_street"
                 app:layout_constraintTop_toTopOf="@id/editUserStreet"
                 app:layout_constraintBottom_toBottomOf="@id/editUserStreet"
                 app:layout_constraintRight_toLeftOf="@id/userInfoGuidance"
@@ -130,7 +132,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="City:"
+                android:text="@string/label_user_city"
                 app:layout_constraintTop_toTopOf="@id/editUserCity"
                 app:layout_constraintBottom_toBottomOf="@id/editUserCity"
                 app:layout_constraintRight_toLeftOf="@id/userInfoGuidance"
@@ -139,7 +141,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="State:"
+                android:text="@string/label_user_state"
                 app:layout_constraintTop_toTopOf="@id/editUserState"
                 app:layout_constraintBottom_toBottomOf="@id/editUserState"
                 app:layout_constraintRight_toLeftOf="@id/userInfoGuidance"
@@ -149,7 +151,7 @@
                 android:id="@+id/labelPostal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Postal Code:"
+                android:text="@string/label_user_postal"
                 app:layout_constraintTop_toTopOf="@id/editUserPostal"
                 app:layout_constraintBottom_toBottomOf="@id/editUserPostal"
                 app:layout_constraintRight_toLeftOf="@id/userInfoGuidance"/>
@@ -157,7 +159,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Phone:"
+                android:text="@string/label_user_phone"
                 app:layout_constraintTop_toTopOf="@id/editUserPhone"
                 app:layout_constraintBottom_toBottomOf="@id/editUserPhone"
                 app:layout_constraintRight_toLeftOf="@id/userInfoGuidance"
@@ -170,13 +172,15 @@
         android:id="@+id/cardAdditional"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/cardUserDetails"
-        app:layout_constraintBottom_toTopOf="@id/buttonCompleteOrder">
+        app:layout_constraintBottom_toTopOf="@id/buttonCompleteOrder"
+        app:cardCornerRadius="@dimen/radius"
+        app:cardBackgroundColor="@color/corn">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
+            android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/cardAdditionalGuideline"
@@ -190,7 +194,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="Additional Info - Favorites"
+                android:text="@string/label_user_header2"
                 android:textSize="20sp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -200,7 +204,7 @@
                 android:id="@+id/editUserSauce"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="White Garlic, BBQ, etc..."
+                android:hint="@string/hint_fav_sauce"
                 android:maxLines="1"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -212,7 +216,7 @@
                 android:id="@+id/editUserDrink"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Coke, Pepsi, Orange, etc..."
+                android:hint="@string/hint_fav_drink"
                 android:maxLines="1"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -224,7 +228,7 @@
                 android:id="@+id/editUserMeat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="Beef, Pork, or Chicken"
+                android:hint="@string/hint_fav_meat"
                 android:maxLines="1"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -236,7 +240,7 @@
                 android:id="@+id/labelSauce"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Sauce:"
+                android:text="@string/label_sauce"
                 app:layout_constraintTop_toTopOf="@id/editUserSauce"
                 app:layout_constraintBottom_toBottomOf="@id/editUserSauce"
                 app:layout_constraintRight_toLeftOf="@id/cardAdditionalGuideline" />
@@ -244,7 +248,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Drink:"
+                android:text="@string/label_drink"
                 app:layout_constraintTop_toTopOf="@id/editUserDrink"
                 app:layout_constraintBottom_toBottomOf="@id/editUserDrink"
                 app:layout_constraintRight_toLeftOf="@id/cardAdditionalGuideline"
@@ -253,7 +257,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Meat:"
+                android:text="@string/label_meat"
                 app:layout_constraintTop_toTopOf="@id/editUserMeat"
                 app:layout_constraintBottom_toBottomOf="@id/editUserMeat"
                 app:layout_constraintRight_toLeftOf="@id/cardAdditionalGuideline"
@@ -266,7 +270,7 @@
         android:id="@+id/buttonCompleteOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Proceed to Complete Order"
+        android:text="@string/button_complete_order"
         app:layout_constraintTop_toBottomOf="@id/cardAdditional"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
