--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -69,7 +69,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/groupPaymentMethods"
-        app:layout_constraintBottom_toTopOf="@id/buttonCustomerInfo">
+        app:layout_constraintBottom_toTopOf="@id/buttonCustomerInfo"
+        app:cardCornerRadius="@dimen/radius"
+        app:cardBackgroundColor="@color/corn">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
