--- a/app/src/main/res/layout/order_row_item.xml
+++ b/app/src/main/res/layout/order_row_item.xml
@@ -7,14 +7,15 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="@dimen/margin10"
+        android:layout_marginStart="@dimen/margin10"
+        android:layout_marginEnd="@dimen/margin10"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:cardCornerRadius="@dimen/radius"
+        app:cardBackgroundColor="@color/corn" >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,7 +25,8 @@
                 android:id="@+id/labelItemName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Item: "
+                android:text="@string/label_row_name"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintBottom_toBottomOf="@id/rowItemName"
                 app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
                 app:layout_constraintStart_toStartOf="@+id/labelItemToppings"
@@ -34,7 +36,8 @@
                 android:id="@+id/labelItemSize"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Size: "
+                android:text="@string/label_row_size"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintBottom_toBottomOf="@id/rowItemSize"
                 app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
                 app:layout_constraintStart_toStartOf="@+id/labelItemToppings"
@@ -44,7 +47,8 @@
                 android:id="@+id/labelItemCrust"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Crust: "
+                android:text="@string/row_label_crust"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintRight_toLeftOf="@id/rowRightGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemName" />
 
@@ -53,7 +57,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
-                android:text="Toppings: "
+                android:text="@string/label_row_toppings"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toTopOf="@id/rowItemToppings" />
 
@@ -62,8 +67,9 @@
                 android:id="@+id/rowItemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Pizza Name"
+                android:layout_marginStart="@dimen/margin20"
+                android:text="@string/default_row_name"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintBottom_toTopOf="@id/rowItemSize"
                 app:layout_constraintLeft_toRightOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,8 +78,9 @@
                 android:id="@+id/rowItemSize"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Pizza Size"
+                android:layout_marginStart="@dimen/margin20"
+                android:text="@string/default_row_size"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintLeft_toRightOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemName" />
 
@@ -81,8 +88,9 @@
                 android:id="@+id/rowItemCrust"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="Pizza Crust"
+                android:layout_marginStart="@dimen/margin10"
+                android:text="@string/default_row_crust"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintLeft_toRightOf="@id/rowRightGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemName" />
 
@@ -90,8 +98,9 @@
                 android:id="@+id/rowItemToppings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Pizza Toppings"
+                android:layout_marginStart="@dimen/margin20"
+                android:text="@string/default_row_toppings"
+                android:textSize="@dimen/rowFontSize"
                 app:layout_constraintLeft_toRightOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemSize" />
 
@@ -99,10 +108,10 @@
                 android:id="@+id/rowItemPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="@dimen/margin10"
                 android:layout_marginTop="16dp"
-                android:text="Pizza Price"
-                android:textSize="20sp"
+                android:text="@string/default_row_price"
+                android:textSize="@dimen/rowFontSizeL"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/rowRightGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemCrust" />
