--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="fontSizeS">18sp</dimen>
     <dimen name="fontSizeM">20sp</dimen>
-    <dimen name="margin40">40dp</dimen>
     <dimen name="fontSizeL">30sp</dimen>
+    <dimen name="rowFontSize">15sp</dimen>
+    <dimen name="rowFontSizeL">20sp</dimen>
+    <dimen name="margin40">40dp</dimen>
+    <dimen name="margin10">10dp</dimen>
+    <dimen name="radius">10dp</dimen>
+    <dimen name="margin20">20dp</dimen>
 </resources>
