--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -125,6 +125,7 @@
                 app:layout_constraintStart_toStartOf="@id/labelSummaryAddress"/>
 
             <TextView
+                android:id="@+id/labelSummaryCardEnding"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_summary_card"
