--- a/app/src/main/res/layout/order_row_item.xml
+++ b/app/src/main/res/layout/order_row_item.xml
@@ -47,6 +47,7 @@
                 android:id="@+id/labelItemCrust"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin10"
                 android:text="@string/row_label_crust"
                 android:textSize="@dimen/rowFontSize"
                 app:layout_constraintRight_toLeftOf="@id/rowRightGuideline"
@@ -88,7 +89,6 @@
                 android:id="@+id/rowItemCrust"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin10"
                 android:text="@string/default_row_crust"
                 android:textSize="@dimen/rowFontSize"
                 app:layout_constraintLeft_toRightOf="@id/rowRightGuideline"
@@ -130,6 +130,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_end="100dp" />
+
+            <ImageButton
+                android:id="@+id/rowItemDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_delete"
+                android:backgroundTint="@color/corn"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
